# ak

./: .gitignore
AngewandteKryptografie/: cmake-debug.sh
AngewandteKryptografie (2)/CMakeModules/: FindCryptoPP.cmake
AngewandteKryptografie (2)/src/Praktikum-4/: PublicKeyAlgorithmBox.cpp  RSAEncryptor.h  RSAOracle.h  RabinAttack.h  RabinDecryptor.h  RabinEncryptor.cpp  rabin.cpp
AngewandteKryptografie/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
AngewandteKryptografie/Debug/Basics/: Makefile  cmake_install.cmake
AngewandteKryptografie/Debug/Basics/Apps/: Makefile  cmake_install.cmake
AngewandteKryptografie/Debug/Basics/Lib/: Makefile  cmake_install.cmake
AngewandteKryptografie/EclipseDebug/: .cproject  CMakeCache.txt  Makefile  cmake_install.cmake
AngewandteKryptografie/EclipseDebug/Basics/: Makefile  cmake_install.cmake
AngewandteKryptografie/EclipseDebug/Basics/Apps/: Makefile  cmake_install.cmake
AngewandteKryptografie/EclipseDebug/Basics/Lib/: Makefile  cmake_install.cmake
AngewandteKryptografie/EclipseDebug/Praktikum-1/: Makefile  cmake_install.cmake
AngewandteKryptografie/EclipseDebug/Praktikum-2/: Makefile  cmake_install.cmake
AngewandteKryptografie/EclipseDebug/Praktikum-3/: Makefile  cmake_install.cmake
AngewandteKryptografie/EclipseDebug/Praktikum-4/: Makefile  cmake_install.cmake
AngewandteKryptografie/EclipseDebug/Praktikum-5/: Makefile  cmake_install.cmake
AngewandteKryptografie/EclipseDebug/Praktikum-6/: Makefile  cmake_install.cmake
AngewandteKryptografie/EclipseDebug/Praktikum-7/: Makefile  cmake_install.cmake
AngewandteKryptografie/Release/: CMakeCache.txt  Makefile  cmake_install.cmake
AngewandteKryptografie/Release/Basics/: Makefile  cmake_install.cmake
AngewandteKryptografie/Release/Basics/Apps/: Makefile  cmake_install.cmake
AngewandteKryptografie/data/: KDXECABEED  RBZVKTERMVYKPDMFUKRTBV  ac-testat-2014ws-cipher.txt  aescipher.txt  angewandtekryptografie  base64data.txt  descipher.txt  dhparams.txt  example_text.txt  felix_sein_bullshit_aber _voll_klug  geheim.txt  testat.txt  vigcipher-praktikum.txt
AngewandteKryptografie/src/: CMakeLists.txt  CMakeLists.txt~
AngewandteKryptografie/src/Basics/: CMakeLists.txt  CMakeLists.txt~
AngewandteKryptografie/src/Basics/Apps/: CMakeLists.txt  CMakeLists.txt~  Greetings.cpp  Greetings.h  Secret.cpp  Secret.hpp  calculate.cpp  helloWorld.cpp  message.cpp
AngewandteKryptografie/src/Basics/Lib/: CMakeLists.txt  Function.h  Sinus.cpp  Sinus.h  Square.cpp  Square.h
AngewandteKryptografie/src/CMakeModules/: FindCryptoPP.cmake
AngewandteKryptografie/src/Praktikum-1/: AffineBreaker.cpp  AffineBreaker.h  AffineCipher.cpp  AffineCipher.h  CMakeLists.txt  ClassicCipher.cpp  ClassicCipher.h  abreaker.cpp  affine.cpp  stldemo.cpp
AngewandteKryptografie/src/Praktikum-2/: CMakeLists.txt  VigenereBreaker.cpp  VigenereBreaker.h  VigenereCipher.cpp  VigenereCipher.h  coindex.cpp  kasiski.cpp  searchshift.cpp  vbreaker.cpp  vigenere.cpp
AngewandteKryptografie/src/Praktikum-3/: BlockCipher.cpp  CMakeLists.txt  DESCipher.cpp  DESCipher.h  des.cpp
AngewandteKryptografie/src/Praktikum-4/: PublicKeyAlgorithmBox (fenixMob's conflicted copy 2015-01-24 (1)).cpp  PublicKeyAlgorithmBox (fenixMob's conflicted copy 2015-01-24).cpp  PublicKeyAlgorithmBox.cpp  PublicKeyAlgorithmBox.h  RSAAttack.cpp  RSAAttack.h  RSADecryptor.cpp  RSADecryptor.h  RSAEncryptor.cpp  RSAOracle.cpp  RabinAttack.cpp  RabinDecryptor.cpp  RabinEncryptor (fenixMob's conflicted copy 2015-01-24).cpp  RabinEncryptor.cpp  RabinEncryptor.h  pubkey.cpp  rabin.cpp  rsa.cpp
AngewandteKryptografie/src/Praktikum-5/: BlumBlumShubGenerator.cpp  BlumBlumShubGenerator.h  CMakeLists.txt  CMakeLists.txt~  PRNG.cpp  PRNG.h  cryptopp-intro.cpp
AngewandteKryptografie/src/Praktikum-6/: CMakeLists.txt  FortunaGenerator.cpp  FortunaGenerator.h  MillerRabinTest.cpp  MillerRabinTest.h  primes.cpp
AngewandteKryptografie/src/Praktikum-7/: CMakeLists.txt  DHProtocol.h  MessageEncoder.cpp  dhprotocol (Case Conflict (1)).cpp  dhprotocol.cpp  encoder.cpp  netintro.cpp
