# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# + CMakeLists.txt
# + Folder: src/Praktikum-1
# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

ADD_EXECUTABLE( stldemo stldemo )

ADD_EXECUTABLE( affine affine AffineCipher ClassicCipher )

ADD_EXECUTABLE( abreaker abreaker AffineCipher AffineBreaker ClassicCipher )

