# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# + CMakeLists.txt
# + Folder: src/Praktikum-3
# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/../Praktikum-1)

ADD_EXECUTABLE( des des DESCipher BlockCipher )


